@@ -1,3 +1,3 @@
 Manifest-Version: 1.0
-Created-By: Apache Ant @VERSION@
+Ant-Version: Apache Ant @VERSION@ 
 
